fixed double scrollbar issue

--- a/src/Calc.css
+++ b/src/Calc.css
@@ -7,7 +7,7 @@
 
 .Score{
     color: lightgreen;
-
+    top: 10px
 }
 
 .Rewards{
@@ -55,6 +55,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    height: 100vh;
 }
 
 text {
